exports[`test component structure match snapshot 1`] = `
<div
  className="test-subject">
  <div
    className="test-subject__filter-category">
    <div
      className="test-subject__filter-category-primary-text" />
    <ul
      className="test-subject__filter-category-list nav nav-tabs" />
  </div>
  <div
    className="test-subject__filter-date">
    <button
      className="test-subject__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last month
    </button>
    <button
      className="test-subject__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last 3 months
    </button>
    <div
      className="test-subject__filter-date-label">
      From:
    </div>
    <input
      className="test-subject__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value={undefined} />
    <div
      className="test-subject__filter-date-label">
      To:
    </div>
    <input
      className="test-subject__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value={undefined} />
  </div>
</div>
`;

exports[`test component structure with all parameters match snapshot 1`] = `
<div
  className="test-subject">
  <div
    className="test-subject__filter-category">
    <div
      className="test-subject__filter-category-primary-text">
      My test list
    </div>
    <ul
      className="test-subject__filter-category-list nav nav-tabs">
      <li
        className="test-subject__filter-category-list-item test-subject__filter-category-active-item"
        onClick={[Function]}>
        skill_1
      </li>
      <li
        className="test-subject__filter-category-list-item "
        onClick={[Function]}>
        skill_2
      </li>
      <li
        className="test-subject__filter-category-list-item "
        onClick={[Function]}>
        skill_3
      </li>
    </ul>
  </div>
  <div
    className="test-subject__filter-date">
    <button
      className="test-subject__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last month
    </button>
    <button
      className="test-subject__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last 3 months
    </button>
    <div
      className="test-subject__filter-date-label">
      From:
    </div>
    <input
      className="test-subject__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value="2016-12-01" />
    <div
      className="test-subject__filter-date-label">
      To:
    </div>
    <input
      className="test-subject__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value="2016-12-12" />
  </div>
</div>
`;

exports[`test component structure without any parameter match snapshot 1`] = `
<div
  className={undefined}>
  <div
    className="undefined__filter-category">
    <div
      className="undefined__filter-category-primary-text" />
    <ul
      className="undefined__filter-category-list nav nav-tabs" />
  </div>
  <div
    className="undefined__filter-date">
    <button
      className="undefined__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last month
    </button>
    <button
      className="undefined__filter-date-button btn btn-primary"
      onClick={[Function]}>
      last 3 months
    </button>
    <div
      className="undefined__filter-date-label">
      From:
    </div>
    <input
      className="undefined__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value={undefined} />
    <div
      className="undefined__filter-date-label">
      To:
    </div>
    <input
      className="undefined__filter-date-input form-control"
      onChange={[Function]}
      type="date"
      value={undefined} />
  </div>
</div>
`;
